tests/paczka1/small_fuzzy/20467942.err
Error in line 1: I4rRq A803 54,9
Error in line 5: cJh A803 62,42
Error in line 4: I4rRq S715 79,8
Error in line 6: A195 A593 23,4
Error in line 7: cJh A803 156,1
